--- a/src/index.styles.css
+++ b/src/index.styles.css
@@ -3,6 +3,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+html {
+  font-family: "Lato", sans-serif;
+  font-size: 14px;
+}
 
 body {
   width: 100vw;
