--- a/src/components/contactcard.styles.css
+++ b/src/components/contactcard.styles.css
@@ -12,6 +12,7 @@
   align-items: center;
   margin-bottom: 10px;
   border-radius: 5px;
+  transition: all 500ms ease-in;
 }
 
 .contact-card img {
@@ -20,4 +21,14 @@
   object-fit: cover;
   margin-bottom: 10px;
   border-radius: 10px;
+  transition: all 500ms ease-in;
+}
+
+.contact-card:hover {
+  background-color: #345;
+  font-size: 0.7rem;
+}
+
+.contact-card:hover img {
+  width: 90%;
 }
